--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
 }
