activity_trash_can 수정했습니다.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <!--<activity android:name=".SelectPhotoActivity" /> -->
+        <activity android:name=".SelectPhotoActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".SettingFragment" />
         <activity android:name=".TrashCanFragment" />
@@ -30,7 +30,7 @@
         -->
 
         <activity
-            android:name=".SelectPhotoActivity">
+            android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
