Get photos form External DCIM directory

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.beam4">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application
 
         android:allowBackup="true"
@@ -18,6 +21,7 @@
         <activity android:name=".TrashCanFragment" />
         <activity android:name=".SortByImageFragment" />
         <activity android:name=".SortByTimeFragment" />
+
         <activity
             android:name=".SplashActivity"
             android:screenOrientation="portrait"
