두번째화면 미완 올림

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.beam4">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-
+        <activity android:name=".SortByImageAdapter"></activity>
         <activity android:name=".MainPagerAdapter" />
         <activity android:name=".SelectPhotoActivity" />
         <activity android:name=".MainActivity" />
@@ -20,7 +20,6 @@
         <activity android:name=".TrashCanFragment" />
         <activity android:name=".SortByImageFragment" />
         <activity android:name=".SortByTimeFragment" />
-
         <activity
             android:name=".SplashActivity"
             android:screenOrientation="portrait"
