--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,5 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
-    implementation project(path: ':opencv')
+    //implementation project(path: ':opencv')
 }
