휴지통 뷰 이제 그만 하고 싶다

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".SortByImageAdapter"></activity>
+        <activity android:name=".SortByImageAdapter" />
         <activity android:name=".MainPagerAdapter" />
         <activity android:name=".SelectPhotoActivity" />
         <activity android:name=".MainActivity" />
