--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,10 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     //implementation project(path: ':opencv')
+
+    'com.android.support:appcompat-v7:28.0.0'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    'com.android.support:recyclerview-v7:28.0.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 }
